1) Upgraded froala editor to version 2.9.8; 2) Fixed editor overflowX issue for Firefox.

--- a/styles/BSafes.module.css
+++ b/styles/BSafes.module.css
@@ -429,7 +429,7 @@
 /*--***** Editor general */
 .editorRow {
   min-height:60px;
-  overflow-x:auto;
+  /*overflow-x:auto;*/
   font-size: 1.1rem;
 }
 
